--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>datav</title>
-    <script src="http://api.map.baidu.com/api?v=2.0&ak=oBvDtR6nzWtVchkY4cLHtnah1VVZQKRK"></script>
+    <title>datav2</title>
+    <style>
+      html {
+        font-size: 62.5% !important; /* 10÷16=62.5% */
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but datav doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but datav2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
