--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>datav2</title>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=oBvDtR6nzWtVchkY4cLHtnah1VVZQKRK"></script>
     <style>
       html {
         font-size: 62.5% !important; /* 10÷16=62.5% */
