--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="http://api.map.baidu.com/api?v=2.0&ak=oBvDtR6nzWtVchkY4cLHtnah1VVZQKRK"></script>
     <style>
       html {
-        font-size: 62.5% !important; /* 10÷16=62.5% */
+        font-size: 10px; /* 10÷16=62.5% */
       }
     </style>
   </head>
